IndexBuildsCoordinator does not report operation statistics from the index build thread

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc1, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-04-20
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If I create an index, the operation statistics reported do not include the statistics from the IndexBuildsCoordinator thread that built the index.

      e.g:

      command test.Collection0 command: createIndexes { createIndexes: "Collection0", ... numYields:0 reslen:257 locks:{ ParallelBatchWriterMode: { acquireCount: { r: 3 } }, ReplicationStateTransition: { acquireCount: { w: 4 } }, Global: { acquireCount: { r: 1, w: 3 } }, Database: { acquireCount: { r: 1, w: 3 } }, Collection: { acquireCount: { w: 1, W: 2 } }, Mutex: { acquireCount: { r: 4 } } } flowControl:{ acquireCount: 2 } storage:{} protocol:op_msg 36458ms
      

      This would have previously reported the following:

      • numYields > 0 due to yielding
      • high lock acquisitions due to yielding
      • storage statistics for the number of bytes read and written

            Assignee:
            Gregory Wlodarek
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: