SERVER-43044 IndexBuildsCoordinatorMongod reports operation statistics for slow ops

(cherry picked from commit 8efaacf43cb9860e12f97067c25c842108d66fa4)